--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,12 @@
 # ---------------------
 NODE_ENV=dev
 PORT=3000
+
+# ---------------------
+# Database
+# ---------------------
+DB_HOST=localhost
+DB_NAME=pibesdb
+DB_PASSWORD=postgres
+DB_PORT=5432
+DB_USER=postgres
