--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Jhon Huiracocha",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
