--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "pnpm exec tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "start": "NODE_ENV=prod node dist/index.js",
+    "dev": "NODE_ENV=dev nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Jhon Huiracocha",
