--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,8 @@ DB_NAME=pibesdb
 DB_PASSWORD=postgres
 DB_PORT=5432
 DB_USER=postgres
+
+# ---------------------
+# JWT Authentication
+# ---------------------
+SECRET_KEY=secret
