--- a/.env.template
+++ b/.env.template
@@ -15,4 +15,5 @@ DB_USER=postgres
 # ---------------------
 # JWT Authentication
 # ---------------------
-SECRET_KEY=secret
+ACCESS_TOKEN_PRIVATE_KEY=ACCESS_TOKEN_PRIVATE_KEY
+REFRESH_TOKEN_PRIVATE_KEY=REFRESH_TOKEN_PRIVATE_KEY
