env.template updated: gmail user and password added

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,9 @@ DB_USER=postgres
 # ---------------------
 ACCESS_TOKEN_PRIVATE_KEY=ACCESS_TOKEN_PRIVATE_KEY
 REFRESH_TOKEN_PRIVATE_KEY=REFRESH_TOKEN_PRIVATE_KEY
+
+# ---------------------
+# Nodemailer
+# ---------------------
+GMAIL_USER=example@gmail.com
+GMAIL_PASSWORD=password
