--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
+    "i18n": "^0.15.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.1",
+    "@types/i18n": "^0.13.6",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
