--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A simple REST API using Node & Express",
   "main": "index.js",
   "scripts": {
-    "build": "pnpm exec tsc",
+    "build": "npx tsc",
     "start": "NODE_ENV=prod node dist/index.js",
-    "dev": "NODE_ENV=dev nodemon --exec ts-node src/index.ts"
+    "dev": "NODE_ENV=dev nodemon --exec ts-node ./src/index.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:generate": "npm run typeorm migration:generate -- -d ./src/config/typeorm.config.ts ./src/migrations/$npm_config_name",
+    "typeorm:run": "npm run typeorm migration:run -- -d src/config/typeorm.config.ts",
+    "typeorm:revert": "npm run typeorm migration:revert -- -d ./src/config/typeorm.config.ts"
   },
   "keywords": [],
   "author": "Jhon Huiracocha",
@@ -33,7 +37,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.1",
-    "@types/i18n": "^0.13.6",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
