--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:15.2-alpine
     restart: always
-    container_name: lospibedb
+    container_name: lospibesdb
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
