--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "multer": "1.4.5-lts.1",
@@ -30,19 +29,20 @@
     "otp-generator": "^4.0.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/fs-extra": "^11.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/otp-generator": "^4.0.0",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
