--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "NODE_ENV=prod node dist/index.js",
+    "start": "NODE_ENV=prod node ./dist/index.js",
     "dev": "NODE_ENV=dev nodemon --exec ts-node ./src/index.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:generate": "npm run typeorm migration:generate -- -d ./src/config/typeorm.config.ts ./src/migrations/$npm_config_name",
-    "typeorm:run": "npm run typeorm migration:run -- -d src/config/typeorm.config.ts",
-    "typeorm:revert": "npm run typeorm migration:revert -- -d ./src/config/typeorm.config.ts"
+    "typeorm:generate": "npm run typeorm migration:generate -- -d ./src/database/config/typeorm.config.ts ./src/database/migrations/$npm_config_name",
+    "typeorm:run": "npm run typeorm migration:run -- -d ./src/database/config/typeorm.config.ts",
+    "typeorm:revert": "npm run typeorm migration:revert -- -d ./src/database/config/typeorm.config.ts",
+    "typeorm:seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d ./src/database/config/typeorm.config.ts"
   },
-  "keywords": [],
+  "keywords": [
+    "node",
+    "express",
+    "typeorm",
+    "jwt"
+  ],
   "author": "Jhon Huiracocha",
   "license": "ISC",
   "dependencies": {
@@ -30,6 +36,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12",
+    "typeorm-extension": "^2.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
