env.template updated: base url removed

--- a/.env.template
+++ b/.env.template
@@ -2,13 +2,12 @@
 # Node Configuration
 # ---------------------
 PORT=3000
-BASE_URL=http://localhost:3000/api
 
 # ---------------------
 # Database
 # ---------------------
 DB_HOST=localhost
-DB_NAME=pibesdb
+DB_NAME=lospibesdb
 DB_PASSWORD=postgres
 DB_PORT=5432
 DB_USER=postgres
